# cryptelium-overlay

./: layman.xml
app-admin/cronolog/: Manifest
app-admin/eselect-vi/: Manifest  eselect-vi-1.0.ebuild  eselect-vi-1.1.ebuild
app-arch/dpkg/: Manifest  dpkg-1.15.0.ebuild
app-backup/bacula/: Manifest  bacula-3.0.2.ebuild
app-benchmarks/autobench/: Manifest  autobench-2.1.2.ebuild
app-benchmarks/httperf/: Manifest  httperf-0.8-r1.ebuild
app-crypt/truecrypt/: Manifest  truecrypt-7.ebuild
app-editors/emacs-cvs/: Manifest  emacs-cvs-23.0.9999-r1.ebuild
app-editors/vim/: Manifest
app-editors/vim-core/: Manifest
app-emulation/qemu-softmmu/: Manifest  qemu-softmmu-0.9.0.ebuild
app-office/grisbi/: Manifest  grisbi-0.5.9.ebuild
app-office/openoffice-bin/: Manifest  openoffice-bin-3.0.0_rc2.ebuild
app-text/poppler/: Manifest
dev-cpp/gtkmm/: Manifest  gtkmm-2.10.2-r1.ebuild
dev-db/postgis/: Manifest
dev-db/sqlite/: Manifest  sqlite-3.6.12.ebuild
dev-db/tora/: Manifest  tora-1.3.22.ebuild  tora-2.1.2.ebuild
dev-dotnet/gecko-sharp/: Manifest  gecko-sharp-0.6-r1.ebuild
dev-java/ant-core/: after  before
dev-java/jsr93/: Manifest  jsr93-1.0.ebuild
dev-java/sun-jdk/: Manifest
dev-lang/php/: Manifest  php-5.3.2.ebuild.deactivated
dev-lang/python/: Manifest  python-2.6.4-r1.ebuild
dev-lang/python-perso/: python-perso-2.4.4-r5.ebuild
dev-libs/cyrus-sasl/: Manifest  cyrus-sasl-2.1.22-r3.ebuild
dev-libs/gdl/: Manifest  gdl-0.5.0.ebuild
dev-libs/libebml/: Manifest
dev-libs/libxml2/: Manifest  emerge  emerge2
dev-perl/Encode-HanExtra/: Encode-HanExtra-0.10.ebuild  Manifest
dev-perl/Encode-JIS2K/: Encode-JIS2K-0.02.ebuild  Manifest
dev-perl/HTML-Encoding/: HTML-Encoding-0.53.ebuild  Manifest
dev-perl/SGML-Parser-OpenSP/: Manifest
dev-php/xdebug-client/: Manifest  xdebug-client-2.0.0.ebuild
dev-php5/xdebug/: Manifest  xdebug-2.0.0.ebuild
dev-python/cherrypy/: Manifest  cherrypy-3.2.0_rc1.ebuild
dev-scheme/mzscheme/: Manifest  mzscheme-301.ebuild  mzscheme-352.ebuild
dev-util/bzr/: Manifest  bzr-1.6_beta3.ebuild
dev-util/kdevelop/: Manifest  kdevelop-3.5.ebuild
dev-util/mercurial/: Manifest
eclass/: java-ant-2.eclass  vim.eclass
game-fps/quake3/: Manifest
game-fps/quake3-urbanterror/: Manifest  quake3-urbanterror-4.1.ebuild
games-action/teewars/: ChangeLog  Manifest  teewars-0.3.3.ebuild  teewars-9999.ebuild
games-action/xblast/: Manifest  xblast-2.10.2-r1.ebuild
games-fps/enemy-territory-truecombat/: Manifest  enemy-territory-truecombat-0.49.ebuild
games-fps/quake3/: Manifest  quake3-9999.ebuild
games-simuation/dangerdeep/: Manifest  dangerdeep-0.2.0.ebuild
games-simulation/dangerdeep/: Manifest  dangerdeep-0.2.0.ebuild
games-strategy/lune/: Manifest  lune-0.2e_beta20060714.ebuild
games-strategy/warzone2100/: Manifest  warzone2100-0.2.2.ebuild
games-strategy/wormux/: wormux-0.8alpha1.ebuild
kde-base/plasma-workspace-sav/: Manifest  plasma-workspace-4.2.1-r1.ebuild
mail-client/mailx/: Manifest  mailx-8.1.2.20050715-r2.ebuild
mail-filter/spamassassin/: Manifest  spamassassin-3.2.3.ebuild
media-gfx/xloadimage/: Manifest  xloadimage-4.1-r11.ebuild
media-libs/libdvdread/: Manifest  libdvdread-4.1.3.ebuild
media-libs/libmatroska/: .libmatroska-0.7.7.ebuild.swp  Manifest
media-libs/libquicktime/: Manifest  libquicktime-1.1.5-r1.ebuild
media-libs/svgalib/: Manifest  prout  svgalib-1.9.25-r1.ebuild
media-libs/swfdec/: Manifest  swfdec-0.7.2.ebuild
media-libs/taglib/: Manifest  taglib-1.4.ebuild
media-libs/x264-svn/: Manifest  x264-svn-999999999.ebuild
media-libs/xine-lib/: ChangeLog  Manifest  metadata.xml  xine-lib-1.1.10.1-r1.ebuild  xine-lib-1.1.15.9999.ebuild  xine-lib-1.1.16.9999.ebuild  xine-lib-999999999999.ebuild
media-sound/alsa-driver/: Manifest  alsa-driver-1.0.16.ebuild  alsa-driver-9999-r1.ebuild  alsa-driver-9999.ebuild
media-sound/amarok/: ChangeLog  Manifest  amarok-1.4.9999-r2.ebuild  amarok-2.9999.ebuild  metadata.xml
media-sound/gxmms2-git/: Manifest  gxmms2-git-0.2.ebuild
media-sound/juxtapose-git/: Manifest  (+1 more)
media-tv/xdtv/tv/libxdtv-theme-carbone-fr-1.4.0/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  autogen.sh  configure  configure.in  libxdtv-theme-carbone-fr.spec
media-tv/xdtv/tv/libxdtv-theme-carbone-fr-1.4.0/debian/: changelog  control  libxdtv-theme-carbone-fr.docs  libxdtv-theme-carbone-fr.files  rules
media-tv/xdtv/tv/libxdtv-theme-carbone-fr-1.4.0/pixmaps/: alevt_applysave.xpm  alevt_defaultpage.xpm  alevt_finetune.xpm  alevt_openmainoptions.xpm  alevt_otheralevtparams.xpm  alevt_startalevt.xpm  audio_applysave.xpm  audio_audiooptions.xpm  audio_avoptions.xpm  audio_mp3options.xpm  audio_openmainoptions.xpm  audio_openstreamingoptions.xpm  audio_openvideooptions.xpm  browse_cancel.xpm  browse_done.xpm  browse_file.xpm  browse_folder.xpm  browse_selector.xpm  dvbinit_action_off.xpm  dvbinit_action_on.xpm  dvbinit_close.xpm  dvbinit_label.xpm  editor_RC.xpm  editor_add.xpm  editor_channelnum.xpm  editor_choosehotkey.xpm  editor_close.xpm  editor_delete.xpm  editor_fullscan_off.xpm  editor_fullscan_on.xpm  editor_move_down.xpm  editor_move_up.xpm  editor_opendvbinit.xpm  editor_openmain.xpm  editor_save.xpm  editor_scantv.xpm  editor_shortcuts.xpm  editor_stationname.xpm  editor_update.xpm  ffmpeg_masking.xpm  (+71 more)
media-tv/xdtv/tv/libxdtv-theme-carbone-fr-1.4.0/slackware/: README  SlackBuild  build.conf  slack-desc
media-tv/xdtv/tv/libxdtv-theme-carbone-fr-1.4.0/src/: Makefile  Makefile.in  all_pixmaps_headers.h  lib-pixmaps.c
profiles/: repo_name  use.local.desc
x264-svn/: x264-svn-999999999.ebuild
(+258 files in other folders)
