##############################################################################
# $Id: Makefile.am.nolg,v 1.11 2006/05/12 18:45:11 pingus77 Exp $
##############################################################################
SUBDIRS = src

CLEANFILES = debian/*~ slackware/*~ man/*~ pixmaps/*~ *~ .*~ *.log \#* .\#*

DISTCLEANFILES = Makefile.in Makefile

EXTRA_DIST = @PACKAGE@.spec \
	autogen.sh \
	debian/changelog debian/control debian/@PACKAGE@.docs debian/rules debian/@PACKAGE@.files \
	slackware/README slackware/slack-desc slackware/SlackBuild slackware/build.conf \
	pixmaps/alevt_applysave.xpm pixmaps/stream_applysave.xpm \
	pixmaps/alevt_defaultpage.xpm pixmaps/stream_choosehttpport.xpm \
	pixmaps/alevt_finetune.xpm pixmaps/stream_close.xpm \
	pixmaps/alevt_openmainoptions.xpm pixmaps/stream_openaudiooptions_off.xpm \
	pixmaps/alevt_otheralevtparams.xpm pixmaps/stream_openaudiooptions.xpm \
	pixmaps/alevt_startalevt.xpm pixmaps/stream_openmainoptions.xpm \
	pixmaps/audio_applysave.xpm pixmaps/stream_openvideooptions_off.xpm \
	pixmaps/audio_audiooptions.xpm pixmaps/stream_openvideooptions.xpm \
	pixmaps/audio_openmainoptions.xpm pixmaps/stream_startstreaming_off.xpm \
	pixmaps/audio_openstreamingoptions.xpm pixmaps/stream_startstreaming.xpm \
	pixmaps/stream_startedstreaming.xpm  pixmaps/stream_stoppedstreaming.xpm \
	pixmaps/audio_openvideooptions.xpm pixmaps/stream_streamingoptions.xpm \
	pixmaps/audio_mp3options.xpm pixmaps/audio_avoptions.xpm \
	pixmaps/browse_cancel.xpm pixmaps/sub_applysave.xpm pixmaps/browse_done.xpm \
	pixmaps/sub_openmainoptions.xpm pixmaps/browse_file.xpm pixmaps/sub_pagenum.xpm \
	pixmaps/browse_folder.xpm pixmaps/sub_startsub.xpm pixmaps/browse_selector.xpm \
	pixmaps/video_applysave.xpm pixmaps/editor_add.xpm pixmaps/video_browse.xpm \
	pixmaps/editor_channelnum.xpm pixmaps/video_choosecodec.xpm \
	pixmaps/editor_choosehotkey.xpm pixmaps/video_openaudiooptions.xpm \
	pixmaps/editor_close.xpm pixmaps/video_openmainoptions.xpm \
	pixmaps/editor_delete.xpm pixmaps/video_openstreamingoptions.xpm \
	pixmaps/editor_openmain.xpm pixmaps/video_otheroptions.xpm pixmaps/editor_RC.xpm \
	pixmaps/editor_move_up.xpm pixmaps/editor_move_down.xpm \
	pixmaps/editor_shortcuts.xpm pixmaps/editor_fullscan_off.xpm pixmaps/editor_fullscan_on.xpm pixmaps/editor_opendvbinit.xpm \
        pixmaps/dvbinit_label.xpm pixmaps/dvbinit_action_off.xpm pixmaps/dvbinit_action_on.xpm pixmaps/dvbinit_close.xpm \
	pixmaps/video_pathavi.xpm pixmaps/editor_save.xpm pixmaps/video_preview.xpm \
	pixmaps/editor_scantv.xpm pixmaps/video_schedule.xpm pixmaps/editor_stationname.xpm \
	pixmaps/video_videooptions.xpm pixmaps/editor_update.xpm pixmaps/x11_applysave.xpm \
	pixmaps/grab_applysave.xpm pixmaps/x11_capwidthheight.xpm pixmaps/grab_browse.xpm \
	pixmaps/x11_chooseblackborder.xpm pixmaps/grab_grabimage.xpm \
	pixmaps/x11_openmainoptions.xpm pixmaps/grab_graboptions.xpm pixmaps/x11_pixsize.xpm \
	pixmaps/main_applysave.xpm pixmaps/x11_wmoffby.xpm pixmaps/main_channelsoptions.xpm \
	pixmaps/x11_x11options.xpm pixmaps/main_mainactions.xpm \
	pixmaps/x11_xvcolorkeyinfo.xpm pixmaps/main_openchanneleditor.xpm \
	pixmaps/xosd_applysave.xpm pixmaps/main_openmozaicchannels.xpm \
	pixmaps/xosd_commonxosdoptions.xpm pixmaps/main_openpluginoptions.xpm \
	pixmaps/xosd_mainxosdoptions.xpm pixmaps/main_openx11options.xpm \
	pixmaps/xosd_openmainoptions.xpm pixmaps/main_quit.xpm pixmaps/xosd_updmainxosd.xpm \
	pixmaps/plugin_quit.xpm pixmaps/xosd_updvtxxosd.xpm pixmaps/popup_help.xpm \
	pixmaps/xosd_vtxxosdoptions.xpm pixmaps/popup_infos.xpm \
	pixmaps/xvid_me.xpm pixmaps/xvid_otherset.xpm pixmaps/xvid_profset.xpm \
	pixmaps/xvid_quantizers.xpm  pixmaps/xvid_videoopen.xpm \
	pixmaps/ffmpeg_masking.xpm pixmaps/ffmpeg_me.xpm pixmaps/ffmpeg_otherset.xpm \
	pixmaps/ffmpeg_quantizers.xpm pixmaps/ffmpeg_videoopen.xpm pixmaps/video_codecaopt.xpm \
	pixmaps/xvid_quit.xpm pixmaps/ffmpeg_quit.xpm pixmaps/video_filefmt.xpm 
